# fishmlserv

./: .pyproject.toml.swp  4  Dockerfile  README.md  f.py  fly.toml  ng  pyproject.toml  r.txt  requirements.txt
LB/: Dockerfile  default.conf
note/: fi_data.csv  fish.ipynb  fish_team.ipynb  fishmarket.ipynb  model-k1.pkl  model-k15.pkl  model-k49.pkl  standardscore.ipynb
src/fishmlserv/: cli.py  curl.py  main.org  main.py  model.pkl
src/fishmlserv/model/: .manager.py.swp  manager.py  model-k25.pkl
tests/: test_curl.py  testcurl.py
